@@ -7,6 +7,7 @@ import com.example.prediction.logica.models.AbsModeler;
 import com.example.prediction.logica.models.AbsWekaClassifier;
 import com.example.prediction.logica.parameters.AbsParameter;
 import com.example.prediction.logica.parameters.WekaSimpleParameter;
+
 import weka.classifiers.meta.CVParameterSelection;
 import weka.core.Instances;
 
@@ -34,8 +35,8 @@ public class WekaClassifierOptimizer extends AbsWekaOptimizer {
 				double min=wsp.getFirstValue(minValue);
 				double d = wsp.getValue() % 1;
 				if (d == 0) {
-					Double minInt = new Double(min);
-					Double maxInt = new Double(max);
+					Double minInt = Double.valueOf(min);
+					Double maxInt = Double.valueOf(max);
 					val = wsp.getParameterString().charAt(1) + " " + minInt.intValue() + " " + maxInt.intValue() + " "
 							+ DEFAULT_CLASSIFIER_STEPS;
 				} else {
